[package]
name = "checkdllbitdefender"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
kernel32-sys = "0.2.2"
winapi = { version = "0.3", features = ["psapi", "processthreadsapi", "errhandlingapi", "handleapi", "memoryapi", "winnt", "synchapi", "winbase", "basetsd"] }
termcolor = { version = "1.1", features = [] }
windows-sys = "0.59.0"
sysinfo = "0.29.0"